--- a/styles/style.css
+++ b/styles/style.css
@@ -40,14 +40,16 @@ ol {
   list-style: none;
 }
 
+/* PerfectPixel для Firefox нет. Я использую Pixel Perfect */
+
 .content {
   margin: auto;
   width: 1140px;
-  height: 534px;
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
   gap: 30px;
+  padding-top: 6px;
 }
 
 .result__video-container {
@@ -55,7 +57,6 @@ ol {
   width: 711px;
   height: 386px;
   margin-bottom: 16px;
-  background-color: aquamarine;
 }
 
 .result__video {
@@ -69,6 +70,7 @@ ol {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
+  margin-bottom: 3px;
 }
 
 .search-form__fieldset-title {
@@ -78,23 +80,24 @@ ol {
   margin-bottom: 5px;
 }
 
+/* В фигме Санкт-Петербург написано с тире, а в макете без тире. Расхождение по наложению изображения. */
+
 .search-form__textfield {
   width: 225px;
   height: 27px;
   border: 0;
   background-color: transparent;
-  color: rgba(255, 255, 255, 0.70);
+  color: white;
   font-size: 18px;
   font-family: 'Fira Sans Condensed', sans-serif;
   font-weight: 400;
-  word-wrap: break-word;
   appearance: none;
   border-bottom: 1px solid white;
   border-top: 1px solid white;
 }
 
 .search-form__textfield:active {
-  outline: 2px solid white;
+  outline: 1px solid white;
   outline-offset: 0px;
 }
 
@@ -103,14 +106,16 @@ ol {
 }
 
 .search-form__textfield:focus {
+  outline: none;
+}
+
+/* В браузере Firefox не работает :has */
+
+.search-form__textfield:focus-visible {
   outline: 2px solid white;
   outline-offset: 1px;
   border-bottom: 1px solid white;
   border-top: 1px solid white;
-}
-
-.search-form__submit-button:active {
-  background-color: #545050;
 }
 
 .search-form__fieldset {
@@ -124,7 +129,7 @@ ol {
 }
 
 .search-form__label {
-  display: inline;
+  display: flex;
   width: fit-content;
 }
 
@@ -134,9 +139,6 @@ ol {
 
 .search-form__label:hover {
   cursor: pointer;
-}
-
-.search-form__label-text:hover {
   text-decoration: underline;
 }
 
@@ -146,19 +148,26 @@ ol {
   font-size: 18px;
   font-family: 'Fira Sans Condensed', sans-serif;
   font-weight: 700;
-  word-wrap: break-word;
   background-color: transparent;
   display: block;
   align-self: self-end;
   border: 1px solid white;
 }
 
+.button:hover {
+  background-color: #545050;
+}
+
 .search-form__submit-button {
   width: 194px;
-  height: 34px;
+  min-height: 34px;
 }
 
 .search-form__submit-button:focus {
+  outline: none;
+}
+
+.search-form__submit-button:focus-visible {
   outline: 1px solid white;
   outline-offset: 1px;
 }
@@ -177,19 +186,20 @@ ol {
 
 .content__list {
   position: relative;
-  height: 298px;
+  height: 300px;
   overflow-y: scroll;
+  margin-bottom: 2px;
 }
 
 .content__list-item {
-  margin-bottom: 30px;
+  margin-bottom: 29px;
 }
 
-.content__list-item:active {
+.content__card-link:active {
   background-color: #545050;
 }
 
-.content__list-item:hover {
+.content__card-link:hover {
   text-decoration: underline;
   cursor: pointer;
 }
@@ -205,6 +215,7 @@ ol {
 
 .content__video-card-thumbnail {
   width: 194px;
+  object-fit:cover;
 }
 
 .content__video-card-description-container {
@@ -218,7 +229,8 @@ ol {
   text-transform: uppercase;
   line-height: 70.5px;
   color: white;
-  margin-bottom: 26px;
+  margin-bottom: 22px;
+  word-spacing: -7px;
 }
 
 .content__accent {
@@ -246,6 +258,8 @@ ol {
 
 .content__video-card-description {
   line-height: 16.2px;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  overflow: hidden;
 }
 
 .content__video-card-title {
@@ -254,6 +268,8 @@ ol {
   line-height: 30px;
   text-transform: uppercase;
   margin-bottom: 6px;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  overflow: hidden;
 }
 
 .visually-hidden {
@@ -267,11 +283,13 @@ ol {
 }
 
 .search-form__label .search-form__pseudo-checkbox {
-  display: inline-block;
+  display: flexbox;
   width: 19px;
   height: 19px;
   vertical-align: middle;
   border: 1px solid white;
+  margin-right: 5px;
+  margin-top: 1px;
 }
 
 input[type='checkbox']:checked + .search-form__pseudo-checkbox::before {
@@ -285,5 +303,5 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox::before {
 
 .more-button {
   width: 100%;
-  height: 34px;
+  min-height: 34px;
 }
